Fixed a bunch of sizing issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   width: 46rem;
   max-width: 100%;
   margin: 0 auto;
-  padding: 2.5rem;
   text-align: center;
 }
 
