--- a/src/components/Entry/Entry.css
+++ b/src/components/Entry/Entry.css
@@ -1,30 +1,29 @@
 .pos-title {
   color: white;
+  background: var(--050505, #050505);
   font-size: 1.5rem;
-  font-style: italic;
   font-weight: 700;
-  outline: red;
+  margin: 0;
+  padding: 0 1rem 0 0;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+}
+
+.pos-title-wrapper::before {
+  content: '';
+  display: block;
+  width: auto;
+  height: 1px;
+  background: var(--3A3A3A, #3a3a3a);
+  position: relative;
+  bottom: -1.25rem;
+  z-index: 0;
 }
 
 .entry-container {
   font-size: 1.125rem;
   text-align: left;
-
-  .pos-title {
-    color: white;
-    font-size: 1.5rem;
-    font-style: italic;
-    font-weight: 700;
-
-    &::after {
-      content: '';
-      display: block;
-      width: auto;
-      height: 1px;
-      background: var(--3A3A3A, #3a3a3a);
-      margin: -1rem 0 2rem 5rem;
-    }
-  }
 
   & h3 {
     font-size: 1.125rem;
@@ -55,5 +54,26 @@
         }
       }
     }
+  }
+
+  .source {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+}
+
+[data-theme='light'] .pos-title {
+  color: var(--2D2D2D, #2d2d2d);
+  background-color: white;
+}
+
+[data-theme='light'] .pos-title-wrapper::before {
+  background: var(--3A3A3A, #3a3a3a);
+}
+
+@media (max-width: 767px) {
+  .entry-container .source {
+    font-size: 0.9rem;
   }
 }
