--- a/src/components/SearchField/SearchField.css
+++ b/src/components/SearchField/SearchField.css
@@ -27,3 +27,9 @@
     background-color: var(--F4F4F4, #f4f4f4);
   }
 }
+
+@media (max-width: 400px) {
+  .primary-search-field {
+    font-size: 1rem;
+  }
+}
